@@ -3,6 +3,7 @@ package com.knoldus.controller;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
@@ -12,7 +13,7 @@ public class WordCountInFile {
 
     public static Map<String, Integer> getWordCountOfDataFromFile(String filePath) {
         Map<String, Integer> resultMap = new HashMap<>();
-        try (Stream<String> lines = Files.lines(Path.of(filePath))) {
+        try (Stream<String> lines = Files.lines(Paths.get(filePath))) {
             lines.forEach(line -> Arrays.stream(line.split(" "))
                     .forEach(str ->
                     {
